--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
 
-    <title>Mapbox/Babylon Test</title>
+    <title>Mapbox/Babylon.js Test</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
